# github-activity-tracker

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 328fa6c6970a_create_github_events_table.py  f3724901e86e_create_github_events_table.py
src/: main.py
src/config/: settings.py
src/database/: base.py  engine.py  models.py  session.py
src/github/features/sync_user_activity/: command.py  handler.py  schemas.py
src/shared/: http_client.py
